[package]
name = "rj"
version = "0.1.0"
description = "Rusty FreeBSD jail manager"
authors = ["Andrew Wasilczuk <akw@ml1.net>"]
edition = "2018"

exclude = [
    ".gitignore",
    ".rustfmt.toml",
    "Makefile",
]

[dependencies]
anyhow = "1.0"
askama = "0.8"
clap = "2.33"
indexmap = { version = "1.3.0", features = ["serde-1"] }
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
simplelog = "^0.7.4"
tar = "0.4"
toml = { version = "0.5", preserve_order = ["indexmap"]}
xz2 = "0.1"

[dev-dependencies]
indoc = "0.3"
lazy_static = "1.4.0"
pretty_assertions = "0.6"
rand = "0.7.3"