[package]
name = "rj"
version = "0.1.0"
description = "Rusty FreeBSD jail manager"
authors = ["Andrew Wasilczuk <akw@ml1.net>"]
edition = "2018"

exclude = [
    ".gitignore",
    ".rustfmt.toml",
    "Makefile",
]

[dependencies]
anyhow = "1.0"
askama = "0.8"
chrono = "0.4"
clap = "2.33"
difference = "2.0.0"
log = "0.4"
rand = "0.7"
regex = "1"
reqwest = "0.9"
simplelog = "^0.7.4"
tar = "0.4"
text_io = "0.1.8"
xz2 = "0.1"

[dependencies.toml]
version = "0.5"
features = ["preserve_order"]

[dependencies.indexmap]
version = "1.3.0"
features = ["serde-1"]

[dependencies.serde]
version = "1.0"
features = ["derive"]


[dev-dependencies]
indoc = "0.3"
lazy_static = "1.4.0"
pretty_assertions = "0.6"
rand = "0.7.3"
serial_test = "0.4.0"
tempfile = "3"